# gingko

./: LICENSE  README.md  libtorrent-1.0.0-RC2.patch
gko-src/: CMakeLists.txt  build.conf  build.sh  config.cmake
gko-src/NOAH/: common  control  control.conf  install  remove  symlinks
gko-src/conf/: agent.conf  download.conf  log.conf  tracker.conf
gko-src/group/: CMakeLists.txt  GroupConf.pb.cc  GroupConf.pb.h  GroupConf.proto  GroupService.thrift  Makefile  bbts-group-control  bbts_group.cpp  conf_range.h  define.h  group_client.cpp  group_client.h  group_cluster_task.cpp  group_cluster_task.h  group_manager.cpp  group_manager.h  group_manager_service_handler.cpp  group_manager_service_handler.h  group_params.h  group_task.cpp  group_task.h  supervise.bbts-group  utils.cpp  utils.h
gko-src/group/gen-cpp/: GroupManagerService.cpp  GroupManagerService.h  GroupManagerService_server.skeleton.cpp  GroupService_constants.cpp  GroupService_constants.h  GroupService_types.cpp  GroupService_types.h
gko-src/include/bbts/: BBTSTorrentPlugin.h  BTInfo.hpp  CUrl.h  ConsistentHashRing.hpp  ErrorCategory.h  LazySingleton.hpp  RegexMatch.hpp  SpeedLimit.h  Syms.h  ThriftTracker.h  TrackerConf.pb.h  UnixSocketClient.h  UnixSocketConnection.h  UnixSocketServer.h  WExitCode.h  WorkerPool.h  common_def.h  configure.pb.h  constant_def.h  encode.h  host_info_util.h  log.h  message.pb.h  number_util.h  path.h  pb_conf.h  socket_util.h  statistics.h  string_util.h  subnet_mask.h  torrent_file_util.h  util.h
gko-src/include/bbts/agent/: Task.h  TaskDB.h  TaskManager.h
gko-src/include/bbts/plugin/: hdfs.h  hdfstool.h
gko-src/include/bbts/tool/: BBTSClient.h  ClusterDownloader.h  Downloader.h
gko-src/plugin/: CMakeLists.txt  Makefile  hdfstool.cpp
gko-src/sqlite/: CMakeLists.txt  Makefile
gko-src/src/: BBTSClient.cpp  BBTSTorrentPlugin.cpp  CMakeLists.txt  CUrl.cpp  ClusterDownloader.cpp  Downloader.cpp  ErrorCategory.cpp  Makefile  SpeedLimit.cpp  Syms.cpp  Task.cpp  TaskDB.cpp  TaskManager.cpp  ThriftTracker.cpp  TrackerConf.pb.cpp  TrackerConf.proto  UnixSocketClient.cpp  UnixSocketConnection.cpp  UnixSocketServer.cpp  WorkerPool.cpp  bbts_agent.cpp  configure.pb.cpp  configure.proto  delete_files.cpp  dump_torrent.cpp  encode.cpp  file_is_locked.cpp  gko3.cpp  host_info_util.cpp  log.cpp  make_torrent.cpp  message.pb.cpp  message.proto  number_util.cpp  path.cpp  socket_util.cpp  string_util.cpp  subnet_mask.cpp  util.cpp
gko-tracker-src/: CMakeLists.txt  build.conf  build.sh  config.cmake
gko-tracker-src/clientmock/: CMakeLists.txt  ControlByInfohash.cpp  Makefile  client_mock.cpp  client_mock_infohash.cpp  client_mock_s.cpp
gko-tracker-src/conf/: redis.conf  tracker.conf
gko-tracker-src/include/bbts/: HttpServer.h  KeyTypeRWLock.hpp  LazySingleton.hpp  ObjectPool.h  RWTypeLock.hpp  Random.h  RedisCommandCreator.h  RedisManager.h  StatusManager.h  ThreadSingleton.hpp  TypeLock.hpp  encode.h  encode_util.h  hash_crc32.h  test_ObjectPool.cpp  thrift_serializer.h
gko-tracker-src/include/bbts/tracker/: AnnounceHandler.h  CommonConf.h  InfoHashGarbageCleaner.h  PeerHandler.h  PeerInfo.h  RemotePeersSyncronizer.h  TrackerErrorCategory.h  redis_conf.pb.h  tracker_conf.pb.h
gko-tracker-src/minihttpd/: COMAKE  Makefile  README
gko-tracker-src/minihttpd/include/minihttpd/: closure.h  common.h  current_thread.h  eventloop.h  minihttpd.h  monitor_helper.h  mutex.h  path.h  process_info.h  process_inspector.h  scoped_ptr.h  spinlock.h  strutil.h  timestamp.h  types.h
gko-tracker-src/minihttpd/sample/: Makefile  eventloop_test.cpp  httpd_test.cpp  timer_in_mt_test.cpp  timer_test.cpp
gko-tracker-src/minihttpd/src/: CMakeLists.txt  Makefile  current_thread.cpp  eventloop.cpp  minihttpd.cpp  monitor_helper.cpp  process_info.cpp  process_inspector.cpp  timestamp.cpp
gko-tracker-src/minihttpd/test/: Makefile  closure_test.cpp  current_thread_test.cpp  eventloop_test.cpp  monitor_helper_test.cpp  mutex_test.cpp  path_test.cpp  process_info_test.cpp  spinlock_test.cpp  strutil_test.cpp  timestamp_test.cpp
gko-tracker-src/protocol/: Announce.cpp  Announce.h  Announce_server.skeleton.cpp  CMakeLists.txt  Makefile  announce.thrift  announce_constants.cpp  announce_constants.h  announce_types.cpp  announce_types.h  inner.thrift  inner_constants.cpp  inner_constants.h  inner_types.cpp  inner_types.h  tracker.thrift  tracker_constants.cpp  tracker_constants.h  tracker_types.cpp  tracker_types.h
gko-tracker-src/src/: AnnounceHandler.cpp  CMakeLists.txt  HttpServer.cpp  InfoHashGarbageCleaner.cpp  Makefile  PeerHandler.cpp  PeerInfo.cpp  RedisManager.cpp  RemotePeersSyncronizer.cpp  StatusManager.cpp  TrackerErrorCategory.cpp  encode_util.cpp  hash_crc32.cpp  main.cpp  redis_conf.pb.cc  redis_conf.proto  tracker_conf.pb.cc  tracker_conf.proto
